Create first test
* Seems to be testing json.net and not bugsnag api

--- a/Bugsnag.PCL.Tests/Bugsnag.PCL.Tests.csproj
+++ b/Bugsnag.PCL.Tests/Bugsnag.PCL.Tests.csproj
@@ -34,6 +34,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="EventTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -64,6 +65,15 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Bugsnag.PCL\Bugsnag.PCL.csproj">
+      <Project>{75ad67ec-189f-4df7-80a6-5dabc5b77a64}</Project>
+      <Name>Bugsnag.PCL</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Service Include="{82A7F48D-3B50-4B1E-B82E-3ADA8210C358}" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
